crates/keron-lang/tests/corpus/errors/check/for_as_value_position.keron
val label: String = match for k in [1, 2] {} {
  _ => "ignored",
}
